crates/ars-i18n/tests/ui/translate_unknown_enum_option.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en", domain = "widgets")]
enum BadText {
    #[translate(en = "Hello")]
    Hello,
}

fn main() {}
